@@ -54,6 +54,7 @@ module AdwordsApi
           :AdGroupService,
           :AdParamService,
           :AlertService,
+          :BudgetOrderService,
           :BulkMutateJobService,
           :CampaignAdExtensionService,
           :CampaignCriterionService,
@@ -100,6 +101,7 @@ module AdwordsApi
       [:v201109, :AdGroupService] => 'cm/',
       [:v201109, :AdParamService] => 'cm/',
       [:v201109, :AlertService] => 'mcm/',
+      [:v201109, :BudgetOrderService] => 'billing/',
       [:v201109, :BulkMutateJobService] => 'job/',
       [:v201109, :CampaignAdExtensionService] => 'cm/',
       [:v201109, :CampaignCriterionService] => 'cm/',
